--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "foodspy-shared",
-    "version": "1.0.12",
+    "version": "1.0.13",
     "description": "Shared enums and interfaces between FoodSpy and its API.",
     "main": "./lib/index.js",
     "module": "./lib/index.js",
+    "type": "module",
     "types": "./lib/index.d.ts",
     "repository": {
         "type": "git",
