--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
 	"compilerOptions": {
 		"target": "es2015",
-		"module": "es2020",
+		"module": "commonjs",
 		"strict": true,
 		"esModuleInterop": true,
-		"skipLibCheck": false,
 		"forceConsistentCasingInFileNames": true,
+		"removeComments": true,
 		"outDir": "./lib",
 		"declaration": true
 	},
